--- a/css/social.css
+++ b/css/social.css
@@ -1,8 +1,6 @@
 body {
     text-align: center;
-    background-color: #827eae;
 }
-
 .card {
     margin-top: 5px;
     margin-left: 55px;
@@ -10,3 +8,84 @@ body {
     margin-right: 5px;
     text-align: center;
 }
+.bg {
+    animation:slide 10s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, #d1c7e6 50%, #45216b 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+  }
+  
+  .bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration:4s;
+  }
+  
+  .bg3 {
+    animation-duration:5s;
+  }
+  
+  @keyframes slide {
+    0% {
+      transform:translateX(-25%);
+    }
+    100% {
+      transform:translateX(25%);
+    }
+  }
+.bg-image {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .bg-image img {
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .bg-image:hover img {
+    transform: scale(1.05);
+  }
+
+  .hover-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    transition: background-color 0.5s ease-in-out;
+  }
+
+  /* Animation 1 */
+  .hover-overlay-1:hover .mask {
+    background-color: rgba(255, 0, 0, 0.3);
+  }
+
+  /* Animation 2 */
+  .hover-overlay-2:hover .mask {
+    background-color: rgba(0, 255, 0, 0.3);
+  }
+
+  /* Animation 3 */
+  .hover-overlay-3:hover .mask {
+    background-color: rgba(0, 0, 255, 0.3);
+  }
+
+  /* Animation 4 */
+  .hover-overlay-4:hover .mask {
+    background-color: rgba(255, 255, 0, 0.3);
+  }
+
+  /* Animation 5 */
+  .hover-overlay-5:hover .mask {
+    background-color: rgba(0, 255, 255, 0.3);
+  }
+
+  /* Animation 6 */
+  .hover-overlay-6:hover .mask {
+    background-color: rgba(255, 0, 255, 0.3);
+  }
